# cdm_stats

./: .gitignore  CLAUDE.md  Procfile  README.md  main.py  pyproject.toml
data/: bans.csv  cdl.db  matches.csv  playoff_bans.csv  playoff_maps.csv  playoffs.csv  scrims_players.csv  scrims_team.csv  scrims_teams2.csv  tournament_bans.csv  tournament_maps.csv  tournament_players.csv
data/s1/: bans.csv  matches.csv  playoffs.csv  scrims_players.csv  scrims_team.csv
data/s2/: bans.csv  focus_team.csv  matches.csv  ops_kills.csv  scrims_players.csv  scrims_team.csv  tournament_players.csv
docs/: cli-reference.md
docs/superpowers/plans/: 2026-03-14-cdm-stats-plan.md  2026-03-18-tournament-data-integration-plan.md  2026-04-02-map-strength-dashboard.md  2026-04-02-plotly-dashboard.md  2026-04-02-scrim-data-integration.md  (+2 more)
scripts/: sim_stage1.py
tests/: conftest.py  test_auth.py  test_avoidance.py  test_backfill.py  test_ban_queries.py  test_charts.py  test_csv_loader.py  test_dashboard_app.py  test_dashboard_elo_tracker.py  test_dashboard_map_matrix.py  test_dashboard_matchup_prep.py  test_dashboard_scrim.py  test_dashboard_team_profile.py  test_elo.py  test_excel.py  test_formats.py  test_map_strength.py  test_margin.py  test_ops_loader.py  test_pick_context.py  test_playoff_bans_loader.py  test_playoff_loader.py  test_queries.py  test_queries_ops.py  test_queries_scrim.py  test_queries_tournament_player.py  test_s2_loader.py  test_schema.py  test_scrim_loader.py  test_seed.py  test_tournament_loader.py  test_tournament_player_loader.py  test_week_pills.py
(+45 files in other folders)
