[project]
name = "cdm-stats"
version = "0.1.0"
description = "CDL match analytics pipeline for coaching staff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdm_stats"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
